objects/HealthCloudGA__EhrEncounter__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Encounters</relationshipLabel>
        <relationshipName>Encounters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>Encounters</relationshipLabel>
        <relationshipName>Encounters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalAdmitSourceLabel__c</fullName>
        <label>Hospital Admit Source Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizationOrigin__c</fullName>
        <label>Hospitalization Origin</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizationPreAdmissionId__c</fullName>
        <label>Hospitalization Pre-Admission ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeAdmitSourceCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Hospitalize Admit Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeAdmitSourceSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Hospitalize Admit Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDestination__c</fullName>
        <label>Hospitalize Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDietCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Hospitalize Diet Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDietLabel__c</fullName>
        <label>Hospitalize Diet Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDietSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Hospitalize Diet System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDischargeDiagnosis__c</fullName>
        <description>The final diagnosis given a patient before release from the hospital after all testing, surgery, and workup are complete</description>
        <label>Hospitalize Discharge Diagnosis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDischargeDispositionCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Hospitalize Discharge Disposition Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDischargeDispositionSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Hospitalize Discharge Disposition System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeDischargeDispostionLabel__c</fullName>
        <label>Hospitalize Discharge Disposition Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeOrigin__c</fullName>
        <label>Hospitalize Origin</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizePeriodEnd__c</fullName>
        <label>Hospitalize Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizePeriodStart__c</fullName>
        <label>Hospitalize Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizePreAdmissionId__c</fullName>
        <label>Hospitalize Pre-Admission ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeReadmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospitalize Readmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeSpecialArrangementCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Hospitalize Special Arrangement Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeSpecialArrangementLabel__c</fullName>
        <label>Hospitalize Special Arrangement Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeSpecialArrangementSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Hospitalize Special Arrangement System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeSpecialCourtesyCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Hospitalize Special Courtesy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeSpecialCourtesyLabel__c</fullName>
        <label>Hospitalize Special Courtesy Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizeSpecialCourtesySystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Hospitalize Special Courtesy System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Indication__c</fullName>
        <label>Indication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>Return True if Status != planned OR cancelled AND Period End is greatest else returns false</description>
        <formula>IF( AND( UPPER(HealthCloudGA__Status__c)  &lt;&gt; &apos;PLANNED&apos;, UPPER(HealthCloudGA__Status__c)  &lt;&gt; &apos;CANCELLED&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LastEncounter__c</fullName>
        <description>Type and date of last encounter</description>
        <formula>HealthCloudGA__TypeLabel__c + IF(ISBLANK(HealthCloudGA__PeriodEnd__c),&apos;&apos;, &apos;, &apos; +  TEXT(HealthCloudGA__PeriodEnd__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastEncounter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LengthUnit__c</fullName>
        <label>Length Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LengthValue__c</fullName>
        <label>Length Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1City__c</fullName>
        <label>Location1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Country__c</fullName>
        <label>Location1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Description__c</fullName>
        <label>Location1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1EndDate__c</fullName>
        <label>Location1 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Id__c</fullName>
        <externalId>true</externalId>
        <label>Location1 Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Line1__c</fullName>
        <label>Location1 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Line2__c</fullName>
        <label>Location1 Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Name__c</fullName>
        <label>Location1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1PostalCode__c</fullName>
        <label>Location1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1StartDate__c</fullName>
        <label>Location1 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1State__c</fullName>
        <label>Location1 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomPeriodEnd__c</fullName>
        <label>Location1 Telecom Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomPeriodStart__c</fullName>
        <label>Location1 Telecom Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomSystem__c</fullName>
        <label>Location1 Telecom System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomUse__c</fullName>
        <label>Location1 Telecom Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TelecomValue__c</fullName>
        <label>Location1 Telecom Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Text__c</fullName>
        <label>Location1 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TypeCode__c</fullName>
        <label>Location1 Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TypeLabel__c</fullName>
        <label>Location1 Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1TypeSystem__c</fullName>
        <label>Location1 Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Type__c</fullName>
        <label>Location1 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location1Use__c</fullName>
        <label>Location1 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2City__c</fullName>
        <label>Location2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Country__c</fullName>
        <label>Location2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Description__c</fullName>
        <label>Location2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2EndDate__c</fullName>
        <label>Location2 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Id__c</fullName>
        <externalId>true</externalId>
        <label>Location2 Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Line1__c</fullName>
        <label>Location2 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Name__c</fullName>
        <label>Location2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2PostalCode__c</fullName>
        <label>Location2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2StartDate__c</fullName>
        <label>Location2 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2State__c</fullName>
        <label>Location2 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomPeriodEnd__c</fullName>
        <label>Location2 Telecom Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomPeriodStart__c</fullName>
        <label>Location2 Telecom Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomSystem__c</fullName>
        <label>Location2 Telecom System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomUse__c</fullName>
        <label>Location2 Telecom Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TelecomValue__c</fullName>
        <label>Location2 Telecom Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Text__c</fullName>
        <label>Location2 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TypeCode__c</fullName>
        <label>Location2 Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TypeLabel__c</fullName>
        <label>Location2 Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2TypeSystem__c</fullName>
        <label>Location2 Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Type__c</fullName>
        <label>Location2 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location2Use__c</fullName>
        <label>Location2 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3City__c</fullName>
        <label>Location3 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Country__c</fullName>
        <label>Location3 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Description__c</fullName>
        <label>Location3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3EndDate__c</fullName>
        <label>Location3 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Id__c</fullName>
        <externalId>true</externalId>
        <label>Location3 Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Name__c</fullName>
        <label>Location3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3PostalCode__c</fullName>
        <label>Location3 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3StartDate__c</fullName>
        <label>Location3 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3State__c</fullName>
        <label>Location3 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomPeriodEnd__c</fullName>
        <label>Location3 Telecom Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomPeriodStart__c</fullName>
        <label>Location3 Telecom Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomSystem__c</fullName>
        <label>Location3 Telecom System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomUse__c</fullName>
        <label>Location3 Telecom Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TelecomValue__c</fullName>
        <label>Location3 Telecom Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Text__c</fullName>
        <label>Location3 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TypeCode__c</fullName>
        <label>Location3 Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TypeLabel__c</fullName>
        <label>Location3 Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3TypeSystem__c</fullName>
        <label>Location3 Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Type__c</fullName>
        <label>Location3 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location3Use__c</fullName>
        <label>Location3 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Encounters</relationshipLabel>
        <relationshipName>Encounters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PeriodEnd__c</fullName>
        <description>The end time of the encounter</description>
        <label>Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PeriodStart__c</fullName>
        <description>The Start time of the encounter</description>
        <label>Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PriorityCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Priority Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PriorityLabel__c</fullName>
        <label>Priority Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrioritySystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Priority System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonLabel__c</fullName>
        <label>Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Reason System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ServiceProvider__c</fullName>
        <label>Service Provider</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeLabel__c</fullName>
        <label>Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Encounter</label>
    <nameField>
        <displayFormat>Enco-{0}</displayFormat>
        <label>EHR Encounter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Encounters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>